--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "yiisoft/yii2": "~2.0.7"
+        "yiisoft/yii2": "~2.0.13"
     },
     "require-dev": {
-        "yiisoft/yii2-codeception": "~2.0"
+        "codeception/codeception": "2.3.7"
     },
     "suggest": {
         "yiisoft/yii2-bootstrap": "Used when using layout 'left-menu', 'right-menu' or 'top-menu'"
@@ -29,14 +29,19 @@
             "mdm\\admin\\": ""
         }
     },
+	"config": {
+		"fxp-asset": {
+			"installer-paths": {
+				"npm-asset-library": "vendor/npm",
+				"bower-asset-library": "vendor/bower"
+			}
+		},
+		"process-timeout": 1800
+	},	
     "extra": {
         "branch-alias": {
             "dev-1.0.master": "1.0.x-dev",
             "dev-master": "2.x-dev"
-        },
-        "asset-installer-paths": {
-            "npm-asset-library": "vendor/npm",
-            "bower-asset-library": "vendor/bower"
         }
     }
 }
