--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
   - travis_retry composer self-update && composer --version
   - travis_retry composer global require fxp/composer-asset-plugin --no-plugins
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
-  - travis_retry composer install --dev --prefer-dist --no-interaction
+  - travis_retry composer install --no-interaction
 # codeception
   - travis_retry composer global require "codeception/codeception=2.1.11" "codeception/specify=*" "codeception/verify=*"
 # setup application:
