--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ cache:
 
 install:
   - travis_retry composer self-update && composer --version
-  - travis_retry composer global require fxp/composer-asset-plugin --no-plugins
+#  - travis_retry composer global require fxp/composer-asset-plugin --no-plugins
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
-  - travis_retry composer install --no-interaction
+  - travis_retry composer install --dev --prefer-dist --no-interaction
 # codeception
   - travis_retry composer global require "codeception/codeception=2.1.11" "codeception/specify=*" "codeception/verify=*"
 # setup application:
