--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,9 @@ cache:
     - $HOME/.composer/cache
 
 install:
-  - travis_retry composer self-update && composer --version
-#  - travis_retry composer global require fxp/composer-asset-plugin --no-plugins
+#  - travis_retry composer self-update && composer --version
+  - travis_retry composer --version
+  - travis_retry composer global require fxp/composer-asset-plugin --no-plugins
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
   - travis_retry composer install --dev --prefer-dist --no-interaction
 # codeception
