--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,11 @@ cache:
     - $HOME/.composer/cache
 
 install:
-#  - travis_retry composer self-update && composer --version
-  - travis_retry composer clear-cache
+  - travis_retry composer self-update && composer --version
   - travis_retry composer --version
   - travis_retry composer global require fxp/composer-asset-plugin --no-plugins
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
-  - travis_retry composer install --dev --prefer-dist --no-interaction
+  - travis_retry composer update --prefer-dist --no-interaction --no-progress --optimize-autoloader
 # codeception
   - travis_retry composer global require "codeception/codeception=2.1.*" "codeception/specify=*" "codeception/verify=*"
 # setup application:
