--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - travis_retry composer --version
   - travis_retry composer global require fxp/composer-asset-plugin --no-plugins
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
-  - travis_retry composer update --prefer-dist --no-interaction --no-progress
+  - travis_retry composer install --prefer-dist --no-interaction --no-progress
 # codeception
   - travis_retry composer global require "codeception/codeception=2.1.*" "codeception/specify=*" "codeception/verify=*"
 # setup application:
@@ -28,6 +28,7 @@ install:
     cd ..
 
 before_script:
+  - echo "memory_limit=2G" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
   - mysql --version
 
   # initialize databases
