--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,9 @@ install:
   - travis_retry composer --version
   - travis_retry composer global require fxp/composer-asset-plugin --no-plugins
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
-  - travis_retry composer install --prefer-dist --no-interaction --no-progress
+  - COMPOSER_MEMORY_LIMIT=-1 travis_retry composer install --prefer-dist --no-interaction --no-progress
 # codeception
-  - travis_retry composer global require "codeception/codeception=2.1.*" "codeception/specify=*" "codeception/verify=*"
+  - COMPOSER_MEMORY_LIMIT=-1 travis_retry composer global require "codeception/codeception=2.1.*" "codeception/specify=*" "codeception/verify=*"
 # setup application:
   - |
     cd tests
