--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ cache:
   directories:
     - $HOME/.composer/cache
 
+services:
+  - mysql
+  
 before_install:
   # initialize databases
   - mysql --version
